<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Daynight Music</string>

    <!-- Player Controls -->
    <string name="play_pause">Play/Pause</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="like">Like</string>
    <string name="unlike">Remove from Liked</string>
    <string name="queue">Queue</string>
    <string name="options">Options</string>
    <string name="close">Close</string>
    <string name="download">Download</string>
    <string name="downloading_song">Downloading Song...</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    
    <!-- Playlist Feature -->
    <string name="create_playlist">Create Playlist</string>
    <string name="rename_playlist">Rename</string>
    <string name="delete_playlist">Delete</string>
    <string name="enter_playlist_name">Enter playlist name</string>
    <string name="playlist_name">Playlist name</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="more_options">More options</string>
    <string name="playlist_image">Playlist cover image</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="playlist_created">Playlist created</string>
    <string name="playlist_renamed">Playlist renamed</string>
    <string name="playlist_deleted">Playlist deleted</string>
    <string name="song_added_to_playlist">Song added to playlist</string>
    <string name="song_removed_from_playlist">Song removed from playlist</string>
    <string name="confirm_delete_playlist">Are you sure you want to delete "%1$s"? This cannot be undone.</string>

    <!-- Playlist Dialog Strings -->
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    
    <!-- Queue UI -->
    <string name="now_playing">Now Playing</string>
    <string name="close_queue">Close queue</string>
    
    <!-- Playlist UI -->
    <string name="your_playlists">Your Playlists</string>
    <string name="no_playlists_yet">No playlists yet</string>
    <string name="create_first_playlist">Create your first playlist to get started</string>

    <!-- Auth UI -->
    <string name="auth_login">Login</string>
    <string name="auth_register">Register</string>
    <string name="auth_create_account">Create Account</string>
    <string name="auth_google_sign_in">Continue with Google</string>
    <string name="auth_skip">Skip for now</string>
    <string name="auth_sign_in_subtitle">Sign in to sync your playlists</string>
    <string name="auth_nickname_title">Choose your nickname</string>
    <string name="auth_nickname_subtitle">This is how you\'ll appear in DayNight Music</string>
    <string name="auth_logout">Log out</string>
    <string name="auth_sync_now">Sync Now</string>

    <!-- Settings UI -->
    <string name="theme_selected">Selected</string>
    <string name="theme_item_description">Theme option</string>

    <!-- Search UI -->
    <string name="header_artists">Artists</string>
    <string name="header_songs">Songs</string>
    <string name="artist_image_description">Artist profile image</string>
    <string name="verified_artist_badge">Verified artist</string>
    <string name="top_songs">Top Songs</string>
    <string name="verified_artist">Verified artist</string>

</resources>